src/assets/sass/components/_TheExtensions.scss
@use '../abstracts/all' as *;
@use '../base/helpers' as *;

.extensions {
  grid-area: ext;
  @extend %primary-title-subtitle;
}

.extensions__card-wrapper {
  $card-top-margin: 40px;

  @include flexbox(null, space-evenly, flex-start, 35px);
  flex-wrap: wrap;
  margin: 40px 0 100px 0;
  padding-top: 6px;
  width: 100%;

  @include query(lg) {
    width: 93%;

    > :nth-child(2) {
      margin-top: $card-top-margin;
    }
    
    > :nth-child(3) {
      margin-top: $card-top-margin * 2;
    }
  }
}

.ext-card {
  @include flexbox(col, null, center);
  width: 100%;
  max-width: 280px;
  border-radius: 13px;
  padding-top: 50px;
  box-shadow: 0 12px 12px 1px rgba($grayish-blue, .27);

  &__icon {
    background-repeat: no-repeat;
  }

  &__title {
    margin-top: 30px;
  }

  &__subtitle {
    margin: 10px 0 30px 0;
    color: $grayish-blue;
  }

  &__btn-wrapper {
    @include flexbox(null, center, center);
    height: 90px;
    width: 100%;
    // background-color: lightblue;
  }
}

